Refactor: Using defer to load

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Text Generator</title>
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="custom.css">
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container mt-5">
@@ -21,7 +23,5 @@
     </div>
     <button id="copy-btn" class="btn btn-success mt-3 w-100">Copy Text</button>
   </div>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
