--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="custom.css">
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
   <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
 </head>
 <body>
   <div class="container mt-5">
