Remove: old styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,15 @@
   <script src="index.js" defer></script>
 </head>
 <body>
-  <div class="container mt-5">
+  <div>
     <div>
       <button id="theme-switcher-btn">
         <span id="theme-switcher-knob"></span>
       </button>
     </div>
-    <h1 class="display-4 text-center">Text Generator</h1>
+    <h1>Text Generator</h1>
     <button id="generate-btn">Generate Text</button>
-    <div class="card">
+    <div>
       <div id="text-output"></div>
     </div>
     <button id="copy-btn">Copy Text</button>
