--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
       </button>
     </div>
     <h1>Text Generator</h1>
+    <label for="number-of-words">Number of words:</label>
+    <input id="number-of-words" type="numeric" placeholder="Number of words" min="1" max="100">
     <button id="generate-btn">Generate Text</button>
     <div>
       <div id="text-output"></div>
