Add: Clear button

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
     </div>
     <h1>Text Generator</h1>
     <label for="number-of-words">Number of words:</label>
-    <input id="number-of-words" type="numeric" placeholder="Number of words" min="1" max="100">
+    <input id="number-of-words" type="number" placeholder="Number of words" min="1" max="10000">
     <button id="generate-btn">Generate Text</button>
+    <button id="clear-btn">Clear</button>
     <div>
       <div id="text-output"></div>
     </div>
